<resources>
    <string-array name="language_array">
        <item>English</item>
        <item>中文</item>
        <item>Malay</item>
    </string-array>
    <string name="app_name">"Number Playground "</string>
    <string name="startGame">Start</string>
    <string name="mainActivityTitle">"Number Playground "</string>
    <string name="firstSelection">Number Clash</string>
    <string name="secondSelection">Number Ladder</string>
    <string name="thirdSelection">Number Builder</string>
    <string name="fourthSelection">Maths Master</string>
    <string name="selectGameTitle">Select Your Game</string>
    <string name="quitGame">Quit</string>
    <string name="selectGameDifficultyTitle">Select your game difficulty</string>
    <string name="moderateLevel">Moderate</string>
    <string name="easyLevel">Easy</string>
    <string name="hardLevel">Hard</string>
    <string name="settings">Settings</string>
    <string name="greaterThan">Greater Than</string>
    <string name="lessThan">Less Than</string>
    <string name="increasingOrder">Increasing Order</string>
    <string name="decreasingOrder">Decreasing Order</string>
    <string name="submit">Submit</string>
    <string name="score">score</string>
    <string name="round">round</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exitCurrentGameTitle">Pause Current Game</string>
    <string name="exitCurrentGameInfo">Are you sure that you want to exit this game?</string>
    <string name="exitGameTitle">Exit Game</string>
    <string name="exitGameInfo">Are yau want to exit the game?</string>
    <string name="timeLeft">Time Left</string>
    <string name="second">s</string>
    <string name="continues">continue</string>
    <string name="answerTitle">The answer is :</string>
    <string name="ansCorrect">You are Correct!!!!</string>
    <string name="congratulation">Congratulations...</string>
    <string name="arrange">Arrange the numbers in</string>
    <string name="addition">add</string>
    <string name="substraction">subtract</string>
    <string name="multiplication">multiply</string>
    <string name="division">divide</string>
    <string name="game">Games >></string>
    <string name="difficulty">Difficulty >></string>
    <string name="good_luck_next_time">❌Good luck next time!</string>
    <string name="continue_to_main_menu">Back To Main Menu</string>
    <string name="composedNumberText">Composed number >></string>
    <string name="Music">Music</string>
    <string name="language">Language</string>
    <string name="save">SAVE</string>
    <string name="instruction_ladder">Drag and drop numbers to rearrange them in correct order</string>
    <string name="instruction_clash">Drag and drop into white spaces between two numbers</string>
    <string name="instruction_builder">Drag and drop into white spaces to form a number</string>
    <string name="you_win">🎉Congratulations!!!</string>
</resources>