<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    android:background="@drawable/exit_dialog_background"
    android:elevation="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialogTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/exitCurrentGameTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/dialogInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/exitCurrentGameInfo"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#0A4180"
            android:padding="10dp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#1565C0"
            android:padding="10dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>
