<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.GameSelection">

    <ImageButton
        android:id="@+id/backToMenu"
        android:layout_width="49dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tint="#00FFFF" />

    <TextView
        android:id="@+id/gameSelectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kablammo_regular"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/selectGameTitle"
        android:textColor="#FFFFFF "
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <Button
        android:id="@+id/firstSelection"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#002E5D"
        android:elevation="10dp"
        android:fontFamily="@font/bangers_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/firstSelection"
        android:textColor="#00FFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        app:layout_constraintBottom_toTopOf="@+id/secondSelection"
        app:layout_constraintEnd_toStartOf="@+id/thirdSelection"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameSelectionTitle"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/thirdSelection"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#002E5D"
        android:elevation="10dp"
        android:fontFamily="@font/bangers_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/thirdSelection"
        android:textColor="#00FFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        app:layout_constraintBottom_toTopOf="@+id/fourthSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstSelection"
        app:layout_constraintTop_toBottomOf="@+id/gameSelectionTitle"
        app:layout_constraintVertical_bias="0.5" />


    <Button
        android:id="@+id/secondSelection"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#002E5D"
        android:elevation="10dp"
        android:fontFamily="@font/bangers_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/secondSelection"
        android:textColor="#00FFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fourthSelection"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstSelection"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/fourthSelection"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#002E5D"
        android:elevation="10dp"
        android:fontFamily="@font/bangers_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/fourthSelection"
        android:textColor="#00FFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/secondSelection"
        app:layout_constraintTop_toBottomOf="@+id/thirdSelection"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>