<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.GameDifficultySelection">


    <TextView
        android:id="@+id/textView"
        android:layout_width="501dp"
        android:layout_height="66dp"
        android:fontFamily="@font/kablammo_regular"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/selectGameDifficultyTitle"
        android:textColor="#E0E0E0"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="268dp"
        android:layout_height="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="283dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/easyMode"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#002E5D"
                android:fontFamily="@font/bangers_regular"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="10"
                android:text="@string/easyLevel"
                android:textColor="#00FFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/moderateMode"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="#002E5D"
                android:fontFamily="@font/bangers_regular"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="10"
                android:text="@string/moderateLevel"
                android:textColor="#00FFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hardMode"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="#002E5D"
                android:fontFamily="@font/bangers_regular"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="10"
                android:text="@string/hardLevel"
                android:textColor="#00FFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/backToSelection"
        android:layout_width="49dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tint="#00FFFF" />


</androidx.constraintlayout.widget.ConstraintLayout>